--- a/style.css
+++ b/style.css
@@ -23,9 +23,8 @@ body{
     border-radius: 50%;
     object-fit: cover;
     margin-right: 15px;
-    border: 4px solid #fff;
+    border: 4px solid #dde77c;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    background-color: #fff;
     z-index: 1; /* Para que la imagen esté por encima del video */
 }
 
@@ -41,6 +40,12 @@ img{
     z-index: 1; /* Para que la imagen esté por encima del video */
 }
 
+.img-api{
+    width: 30%;
+    height: auto;
+    border-radius: 10px;
+}
+
 /* video{
   position: fixed;
   top: 0;
@@ -52,12 +57,12 @@ img{
 } */
 
 h1{
-    color: rgb(168, 168, 239);
+    color: rgb(161, 161, 161);
     font-size: 70px;
     text-align: center;
     margin-top: 20px;
     font-family: Arial, sans-serif;
-    text-shadow: 2px 2px 4px rgb(111, 148, 217);
+    text-shadow: 2px 2px 4px rgb(123, 217, 111);
     
 }
 
@@ -66,10 +71,8 @@ nav{
     width: 100%;
     margin-top: 10px;
     text-align: center;
-    background-color: #e3ad4000;
     padding: 10px 0;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -80,7 +83,7 @@ a{
     border-radius: 10px;
     background-color: #fff;
     text-decoration: none;
-    color: #333;
+    color: #6e706d;
     margin: 0 15px;
     font-weight: bold;
     font-size: 25px;
@@ -92,11 +95,11 @@ article{
     justify-content: space-between;
     height: auto; /* 100% de la altura de la ventana */
     flex-wrap: wrap; /* Permite que los cards se envuelvan a la siguiente línea si no caben */
-    background-color: #c4bceb;
+    background-color: #dde77c;;
     padding: 15px;
     margin: 25px;
     border-radius: 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 8px #dde977;;
     font-size: 16px;
     line-height: 1.5;
     color: #555;
@@ -150,7 +153,7 @@ div{
 a:hover{
    
     transition: transform 0.3s ease;
-    background-color: #c4bceb;
+    background-color: #dde77c;;
     color: #3b3a3a;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
@@ -170,9 +173,11 @@ h2{
 }
 
 .text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 18px;
     text-align: justify;
-    text-justify: inter-word;
-    font-size: 25px;
     color: #444;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f9f9f9;
@@ -181,7 +186,7 @@ h2{
 .inicio{
     height: 50px;
     width: 50px;
-    background-color: #7794c29a;
+    background-color: #72726e86;;
     border-radius: 50%;
     position: fixed;
     bottom: 20px;
@@ -199,7 +204,7 @@ h2{
 }
 
 .inicio:hover{
-    background-color: #556bb2b8;
+    background-color: #f551a3a1;;
     color: white;
 
 }
